# waveracer

./: .gitignore  CHANGELOG.md  LICENSE  Readme.md  build_rust.sh  cabal.project  out  repl.sh  waveracer.cabal
executables/: Sonic.hs
src/: Waveracer.hs
src/Waveracer/: Internal.hs  Raw.hs
wellen-binding/: Cargo.toml  cbindgen.toml
wellen-binding/src/: decode.rs  lib.rs  wellen.rs
