cabal-version:      3.4
name:               waveracer
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Simre1
maintainer:         simre4775@gmail.com
copyright:          Simon Reitinger
category:           Hardware
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common common
    ghc-options: -Wall
    build-depends:
      base ^>=4.20.0.0,
      transformers,
      containers,
      text,
      bytestring,
      vector
    default-language: GHC2024
    default-extensions:
      OverloadedStrings
      GeneralizedNewtypeDeriving
      DerivingStrategies
      RankNTypes
      ImpredicativeTypes
      DuplicateRecordFields
      NoFieldSelectors
      OverloadedRecordDot

library
    import:           common
    exposed-modules:
        Waveracer
    other-modules:
        Waveracer.Raw
    hs-source-dirs:   src
    includes: wellen-binding.h

test-suite waveracer-test
    import:           common
    default-language: GHC2024
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        waveracer
